<resources>
    <string name="app_name">StockTracker</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="insert">Insert</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="view">View</string>
    <string name="total_investment">Total Investment</string>
    <string name="search">search</string>
</resources>
