<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity"
    android:background="@drawable/finance1">


    <Button
        android:id="@+id/insert"
        android:layout_width="98dp"
        android:layout_height="45dp"

        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/insert"
        app:layout_constraintBottom_toTopOf="@+id/totalinvest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"

        android:background="@drawable/rounded_button"/>

    <Button
        android:id="@+id/update"
        android:layout_width="98dp"
        android:layout_height="45dp"

        android:layout_marginStart="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_button"
        android:text="@string/update"
        app:layout_constraintBottom_toTopOf="@+id/totalinvest"

        app:layout_constraintEnd_toStartOf="@+id/insert"
        app:layout_constraintHorizontal_bias="0.485"
        app:layout_constraintStart_toEndOf="@+id/delete"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <Button
        android:id="@+id/delete"
        android:layout_width="98dp"
        android:layout_height="45dp"

        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:text="@string/delete"
        app:layout_constraintBottom_toTopOf="@+id/totalinvest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view"

        android:background="@drawable/rounded_button"/>

    <Button
        android:id="@+id/view"
        android:layout_width="98dp"
        android:layout_height="45dp"

        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="348dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_button"
        android:text="@string/view"
        app:layout_constraintBottom_toTopOf="@+id/totalinvest"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.356" />

    <Button
        android:id="@+id/totalinvest"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:background="@drawable/rounded_button"
        android:text="@string/total_investment"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/search"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="348dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/rounded_button"
        android:text="@string/search"
        app:layout_constraintBottom_toTopOf="@+id/totalinvest"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.348" />


</androidx.constraintlayout.widget.ConstraintLayout>